// hello.proto
syntax = "proto3";

package hello;

option go_package = "/hello";

// 定义请求消息
message HelloRequest {
  string name = 1;
}

// 定义响应消息
message HelloResponse {
  string message = 1;
}

// 定义服务
service HelloService {
  // 定义服务方法
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

// protoc --go_out=. --go-grpc_out=. hello.proto